--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,7 +1,7 @@
 @import '~bpk-mixins';
 
 @mixin container {
-  max-width: $bpk-breakpoint-desktop;
+  max-width: $bpk-breakpoint-tablet;
   margin: 0 auto;
 }
 
