Fixing styling issues

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -9,7 +9,7 @@
   text-align: center;
 
   &__header {
-    padding: $bpk-spacing-lg * 2;
+    padding: $bpk-spacing-lg;
     background-color: $bpk-color-sky-blue;
     background-image: $bpk-primary-gradient;
     color: $bpk-color-white;
