--- a/client/src/Search.scss
+++ b/client/src/Search.scss
@@ -3,3 +3,8 @@
 .grayedText {
   color: $bpk-color-sky-gray-tint-02;
 }
+
+.customPanel {
+  font-size: $bpk-font-size-lg;
+  line-height: $bpk-font-size-xxl;
+}
